--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>vue_music</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Materialize" />
   </head>
   <body>
     <div id="app"></div>
