--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>vue_music</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Materialize" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
   <body>
     <div id="app"></div>
